--- a/style.css
+++ b/style.css
@@ -112,8 +112,9 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -122,6 +123,20 @@ body {
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
+}
+
+.home__center-elements .hero {
+  width: 30%;
+  padding: 5px;
+}
+
+.home__center-elements .hero__text {
+  font-size: 2.5em;
+}
+
+.home__center-elements .hero__subtext {
+  font-size: .9em;
+  color: #4f4f4f;
 }
 
 .home__mouse-icon {
@@ -148,6 +163,13 @@ body {
   display: grid;
   -ms-grid-columns: (minmax(200px, 1fr))[3];
       grid-template-columns: repeat(3, minmax(200px, 1fr));
+  gap: 20px;
+}
+
+.about__cards--align-top, .proposal__cards--align-top {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: start;
 }
 
 .about__cards--max-width, .proposal__cards--max-width {
@@ -159,6 +181,11 @@ body {
   margin-top: 100px;
 }
 
+.catering__description__final-statement {
+  text-align: center;
+  font-weight: 700;
+}
+
 .catering__order-button {
   width: 200px;
   height: 50px;
@@ -167,7 +194,7 @@ body {
   background-color: #158EB5;
   color: #FDFCFC;
   font-size: 1.25em;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .catering__order-button:hover {
@@ -239,8 +266,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 5px;
-  margin: 30px;
+  padding: 10px;
 }
 
 .card__image {
@@ -259,6 +285,80 @@ body {
   font-weight: 700;
 }
 
+.book-order {
+  width: 100%;
+  height: 100%;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: absolute;
+  top: 0;
+  z-index: 10;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.book-order .form {
+  width: 80%;
+  height: 50%;
+  background-color: #FDFCFC;
+  border: 1px solid #e2e2e2;
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  position: relative;
+}
+
+.book-order .form__close-button {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+}
+
+.book-order .form__close-button:hover {
+  cursor: pointer;
+}
+
+.book-order .form__input {
+  width: 200px;
+  height: 28px;
+  padding: 5px;
+  border: 1px solid #b3b3b3;
+  border-radius: 14px;
+}
+
+.book-order .form__button {
+  width: 200px;
+  height: 50px;
+  border: none;
+  border-radius: 25px;
+  background-color: #158EB5;
+  color: #FDFCFC;
+  font-size: 1.25em;
+  height: 35px;
+}
+
+.book-order .form__button:hover {
+  cursor: pointer;
+  background-color: rgba(21, 142, 181, 0.8);
+}
+
 .cupcakes-image {
   width: 700px;
 }
@@ -268,6 +368,16 @@ body {
   background-color: #FDFCFC;
   border-bottom: 1px solid #e2e2e2;
   z-index: 2;
+}
+
+.visible {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.lockScroll {
+  overflow-y: hidden;
 }
 
 @-webkit-keyframes mouse-animation {
