--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,13 @@
-$pageBackground: #FDFCFC;
+$pageBackground: #fdfcfc;
 $brandNameColor: #006573;
-$navButtonColor: #0D5BF2;
-$cardImageBg: #5CBEDC;
-$orderButtonColor: #158EB5;
-$footerBg: #161A1D;
+$navButtonColor: #0d5bf2;
+$cardImageBg: #5cbedc;
+$orderButtonColor: #158eb5;
+$footerBg: #161a1d;
 $footerTextColor: #999999;
 $heroSubtextColor: #4f4f4f;
 
-@mixin button-style{
+@mixin button-style {
     width: 200px;
     height: 50px;
     border: none;
@@ -16,65 +16,64 @@ $heroSubtextColor: #4f4f4f;
     color: $pageBackground;
     font-size: 1.25em;
 
-
-    &:hover{
+    &:hover {
         cursor: pointer;
-        background-color: rgba($orderButtonColor,.8);
+        background-color: rgba($orderButtonColor, 0.8);
     }
 }
 
-*{
+* {
     box-sizing: border-box;
 }
 
-html{
+html {
     scroll-behavior: smooth;
 }
 
-body{
+body {
     margin: 0;
     padding: 0;
-    font-family: 'Comfortaa', cursive;
+    font-family: "Comfortaa", cursive;
     background-color: $pageBackground;
 }
 
-.logo-position{
+.logo-position {
     display: flex;
     align-items: center;
 }
 
-.header{
+.header {
     width: 100%;
     height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 5px;
-    transition: all .25s ease;
+    transition: all 0.25s ease;
 
-    &__logo{
+    &__logo {
         width: 64px;
         height: 64px;
     }
 
-    &__brand-name{
+    &__brand-name {
         margin-left: 5px;
     }
 }
 
-.nav{
+.nav {
     display: flex;
     align-items: center;
 
-    &__element{
+    &__element {
         color: #000;
         text-decoration: none;
         margin: 0 10px;
 
-        &--button{
+        &--button {
             width: 120px;
             height: 40px;
-            font-family: 'Comfortaa', cursive;
+            font-family: "Comfortaa", cursive;
             font-size: 1em;
             font-weight: bold;
             color: #fff;
@@ -82,33 +81,33 @@ body{
             border: none;
             border-radius: 20px;
 
-            &:hover{
+            &:hover {
                 cursor: pointer;
-                background-color: rgba($navButtonColor, .8);
+                background-color: rgba($navButtonColor, 0.8);
             }
         }
     }
 }
 
-.section{
+.section {
     width: 100%;
     height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
 
-    &__title{
-        margin-top: 80px
+    &__title {
+        margin-top: 80px;
     }
 }
 
-.home{
-    background-image: url('images/bg.svg');
+.home {
+    background-image: url("images/bg.svg");
     background-repeat: no-repeat;
     background-size: contain;
     background-position: 100% 0;
 
-    &__center-elements{
+    &__center-elements {
         width: 100%;
         display: flex;
         justify-content: space-evenly;
@@ -116,146 +115,143 @@ body{
         align-self: center;
         flex-grow: 2;
 
-        .hero{
+        .hero {
             width: 30%;
             padding: 5px;
 
-            &__text{
+            &__text {
                 font-size: 2.5em;
             }
 
-            &__subtext{
-                font-size: .9em;
+            &__subtext {
+                font-size: 0.9em;
                 color: $heroSubtextColor;
             }
         }
     }
 
-    &__mouse-icon{
+    &__mouse-icon {
         width: 32px;
         position: absolute;
         left: 50%;
         top: 92%;
-        transform: translate(-50%,-50%);
+        transform: translate(-50%, -50%);
         animation: mouse-animation 2s infinite;
 
-        &:hover{
+        &:hover {
             cursor: pointer;
         }
     }
-
 }
 
-.about, .proposal{
-    
-    &__cards{
+.about,
+.proposal {
+    &__cards {
         flex-grow: 2;
         width: 80%;
         display: grid;
         grid-template-columns: repeat(3, minmax(200px, 1fr));
         gap: 20px;
 
-        &--align-top{
+        &--align-top {
             align-items: start;
         }
-        
-        &--max-width{
+
+        &--max-width {
             width: 100%;
         }
     }
 }
 
-.catering{
-    
-    &__description{
+.catering {
+    &__description {
         width: 80%;
         margin-top: 100px;
 
-        &__final-statement{
+        &__final-statement {
             text-align: center;
             font-weight: 700;
         }
     }
 
-    &__order-button{
+    &__order-button {
         @include button-style;
         margin-top: 50px;
-
     }
 }
 
-.footer{
+.footer {
     width: 100%;
     background-color: $footerBg;
     color: $footerTextColor;
     padding: 5px;
-    font-size: .9em;
+    font-size: 0.9em;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 
-    &__part{
+    &__part {
         width: 50%;
         padding: 5px;
 
-        &__title{
+        &__title {
             color: $pageBackground;
             font-size: 1.1em;
         }
     }
 
-    &__socials{
-        &__item{
+    &__socials {
+        &__item {
             width: 32px;
             margin: 5px 10px;
 
-            &:first-of-type{
+            &:first-of-type {
                 margin-left: 0;
             }
 
-            &:hover{
+            &:hover {
                 cursor: pointer;
             }
-
         }
     }
 
-    &__credits{
+    &__credits {
         width: 100%;
         border-top: 1px solid #444444;
         padding: 5px;
 
-        & > a{
+        & > a {
             color: $footerTextColor;
         }
     }
 }
 
-.card{
+.card {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 10px;
 
-    &__image{
+    &__image {
         width: 64px;
         height: 64px;
         border-radius: 32px;
         padding: 10px;
         background-color: $cardImageBg;
+        fill: #fff;
     }
 
-    &__product-image{
+    &__product-image {
         width: 128px;
     }
 
-    &__title--bold{
+    &__title--bold {
         font-weight: 700;
     }
 }
 
-.book-order{
+.book-order {
     width: 100%;
     height: 100%;
     display: none;
@@ -264,9 +260,9 @@ body{
     position: absolute;
     top: 0;
     z-index: 10;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
 
-    .form{
+    .form {
         width: 80%;
         height: 50%;
         background-color: $pageBackground;
@@ -278,19 +274,19 @@ body{
         align-items: center;
         position: relative;
 
-        &__close-button{
+        &__close-button {
             width: 16px;
             height: 16px;
             position: absolute;
             top: 5px;
             right: 5px;
 
-            &:hover{
+            &:hover {
                 cursor: pointer;
             }
         }
 
-        &__input{
+        &__input {
             width: 200px;
             height: 28px;
             padding: 5px;
@@ -298,43 +294,42 @@ body{
             border-radius: 14px;
         }
 
-        &__button{
+        &__button {
             @include button-style;
             height: 35px;
         }
     }
-    
 }
 
-.cupcakes-image{
+.cupcakes-image {
     width: 700px;
 }
 
-.fixed{
+.fixed {
     position: fixed;
     background-color: $pageBackground;
     border-bottom: 1px solid #e2e2e2;
     z-index: 2;
 }
 
-.visible{
+.visible {
     display: flex;
 }
 
-.lockScroll{
+.lockScroll {
     overflow-y: hidden;
 }
 
-@keyframes mouse-animation{
-    0%{
+@keyframes mouse-animation {
+    0% {
         transform: translateY(0);
     }
 
-    50%{
+    50% {
         transform: translateY(5px);
     }
 
-    100%{
+    100% {
         transform: translateY(0);
     }
 }
