--- a/style.css
+++ b/style.css
@@ -1,3 +1,100 @@
+/*!
+ * Hamburgers
+ * @description Tasty CSS-animated hamburgers
+ * @author Jonathan Suh @jonsuh
+ * @site https://jonsuh.com/hamburgers
+ * @link https://github.com/jonsuh/hamburgers
+ */
+.hamburger {
+  padding: 15px 15px;
+  display: inline-block;
+  cursor: pointer;
+  -webkit-transition-property: opacity, -webkit-filter;
+  transition-property: opacity, -webkit-filter;
+  transition-property: opacity, filter;
+  transition-property: opacity, filter, -webkit-filter;
+  -webkit-transition-duration: 0.15s;
+          transition-duration: 0.15s;
+  -webkit-transition-timing-function: linear;
+          transition-timing-function: linear;
+  font: inherit;
+  color: inherit;
+  text-transform: none;
+  background-color: transparent;
+  border: 0;
+  margin: 0;
+  overflow: visible;
+}
+
+.hamburger:hover {
+  opacity: 0.7;
+}
+
+.hamburger.is-active:hover {
+  opacity: 0.7;
+}
+
+.hamburger.is-active .hamburger-inner,
+.hamburger.is-active .hamburger-inner::before,
+.hamburger.is-active .hamburger-inner::after {
+  background-color: #000;
+}
+
+.hamburger-box {
+  width: 40px;
+  height: 24px;
+  display: inline-block;
+  position: relative;
+}
+
+.hamburger-inner {
+  display: block;
+  top: 50%;
+  margin-top: -2px;
+}
+
+.hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
+  width: 40px;
+  height: 4px;
+  background-color: #000;
+  border-radius: 4px;
+  position: absolute;
+  -webkit-transition-property: -webkit-transform;
+  transition-property: -webkit-transform;
+  transition-property: transform;
+  transition-property: transform, -webkit-transform;
+  -webkit-transition-duration: 0.15s;
+          transition-duration: 0.15s;
+  -webkit-transition-timing-function: ease;
+          transition-timing-function: ease;
+}
+
+.hamburger-inner::before, .hamburger-inner::after {
+  content: "";
+  display: block;
+}
+
+.hamburger-inner::before {
+  top: -10px;
+}
+
+.hamburger-inner::after {
+  bottom: -10px;
+}
+
+/*
+   * Arrow
+   */
+.hamburger--arrow.is-active .hamburger-inner::before {
+  -webkit-transform: translate3d(-8px, 0, 0) rotate(-45deg) scale(0.7, 1);
+          transform: translate3d(-8px, 0, 0) rotate(-45deg) scale(0.7, 1);
+}
+
+.hamburger--arrow.is-active .hamburger-inner::after {
+  -webkit-transform: translate3d(-8px, 0, 0) rotate(45deg) scale(0.7, 1);
+          transform: translate3d(-8px, 0, 0) rotate(45deg) scale(0.7, 1);
+}
+
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -10,8 +107,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Comfortaa', cursive;
-  background-color: #FDFCFC;
+  font-family: "Comfortaa", cursive;
+  background-color: #fdfcfc;
 }
 
 .logo-position {
@@ -36,8 +133,8 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 5px;
-  -webkit-transition: all .25s ease;
-  transition: all .25s ease;
+  -webkit-transition: all 0.25s ease;
+  transition: all 0.25s ease;
 }
 
 .header__logo {
@@ -49,6 +146,17 @@ body {
   margin-left: 5px;
 }
 
+.header .hamburger {
+  display: none;
+  z-index: 4;
+}
+
+@media (max-width: 768px) {
+  .header .hamburger {
+    display: block;
+  }
+}
+
 .nav {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -56,6 +164,25 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+@media (max-width: 768px) {
+  .nav {
+    display: none;
+    width: 100%;
+    height: 100vh;
+    z-index: 3;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+    position: absolute;
+    top: 0;
+    background-color: #fdfcfc;
+  }
 }
 
 .nav__element {
@@ -67,11 +194,11 @@ body {
 .nav__element--button {
   width: 120px;
   height: 40px;
-  font-family: 'Comfortaa', cursive;
+  font-family: "Comfortaa", cursive;
   font-size: 1em;
   font-weight: bold;
   color: #fff;
-  background-color: #0D5BF2;
+  background-color: #0d5bf2;
   border: none;
   border-radius: 20px;
 }
@@ -83,7 +210,7 @@ body {
 
 .section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -105,6 +232,12 @@ body {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: 100% 0;
+}
+
+@media (max-width: 768px) {
+  .home {
+    background-image: none;
+  }
 }
 
 .home__center-elements {
@@ -130,13 +263,29 @@ body {
   padding: 5px;
 }
 
+@media (max-width: 768px) {
+  .home__center-elements .hero {
+    width: 100%;
+  }
+}
+
 .home__center-elements .hero__text {
   font-size: 2.5em;
 }
 
 .home__center-elements .hero__subtext {
-  font-size: .9em;
+  font-size: 0.9em;
   color: #4f4f4f;
+}
+
+.home__center-elements .cupcakes-image {
+  width: 50%;
+}
+
+@media (max-width: 768px) {
+  .home__center-elements .cupcakes-image {
+    display: none;
+  }
 }
 
 .home__mouse-icon {
@@ -154,31 +303,41 @@ body {
   cursor: pointer;
 }
 
-.about__cards, .proposal__cards {
+.about__cards,
+.proposal__cards {
   -webkit-box-flex: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
   width: 80%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (minmax(200px, 1fr))[3];
-      grid-template-columns: repeat(3, minmax(200px, 1fr));
+  -ms-grid-columns: (minmax(30%, 1fr))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
   gap: 20px;
 }
 
-.about__cards--align-top, .proposal__cards--align-top {
+.about__cards--align-top,
+.proposal__cards--align-top {
   -webkit-box-align: start;
       -ms-flex-align: start;
           align-items: start;
 }
 
-.about__cards--max-width, .proposal__cards--max-width {
+.about__cards--max-width,
+.proposal__cards--max-width {
   width: 100%;
 }
 
 .catering__description {
   width: 80%;
-  margin-top: 100px;
+  padding: 10px;
+}
+
+@media (max-width: 768px) {
+  .catering__description {
+    width: 100%;
+    font-size: 0.8em;
+  }
 }
 
 .catering__description__final-statement {
@@ -191,8 +350,8 @@ body {
   height: 50px;
   border: none;
   border-radius: 25px;
-  background-color: #158EB5;
-  color: #FDFCFC;
+  background-color: #158eb5;
+  color: #fdfcfc;
   font-size: 1.25em;
   margin-top: 50px;
 }
@@ -204,10 +363,10 @@ body {
 
 .footer {
   width: 100%;
-  background-color: #161A1D;
+  background-color: #161a1d;
   color: #999999;
   padding: 5px;
-  font-size: .9em;
+  font-size: 0.9em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -225,7 +384,7 @@ body {
 }
 
 .footer__part__title {
-  color: #FDFCFC;
+  color: #fdfcfc;
   font-size: 1.1em;
 }
 
@@ -274,12 +433,18 @@ body {
   height: 64px;
   border-radius: 32px;
   padding: 10px;
-  background-color: #5CBEDC;
+  background-color: #5cbedc;
   fill: #fff;
 }
 
 .card__product-image {
   width: 128px;
+}
+
+@media (max-width: 768px) {
+  .card__product-image {
+    width: 64px;
+  }
 }
 
 .card__title--bold {
@@ -305,7 +470,7 @@ body {
 .book-order .form {
   width: 80%;
   height: 50%;
-  background-color: #FDFCFC;
+  background-color: #fdfcfc;
   border: 1px solid #e2e2e2;
   padding: 10px;
   display: -webkit-box;
@@ -349,10 +514,11 @@ body {
   height: 50px;
   border: none;
   border-radius: 25px;
-  background-color: #158EB5;
-  color: #FDFCFC;
+  background-color: #158eb5;
+  color: #fdfcfc;
   font-size: 1.25em;
   height: 35px;
+  margin: 10px 0;
 }
 
 .book-order .form__button:hover {
@@ -360,13 +526,9 @@ body {
   background-color: rgba(21, 142, 181, 0.8);
 }
 
-.cupcakes-image {
-  width: 700px;
-}
-
 .fixed {
   position: fixed;
-  background-color: #FDFCFC;
+  background-color: #fdfcfc;
   border-bottom: 1px solid #e2e2e2;
   z-index: 2;
 }
