--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,4 @@
+@import "./node_modules/hamburgers/_sass/hamburgers/hamburgers.scss";
 $pageBackground: #fdfcfc;
 $brandNameColor: #006573;
 $navButtonColor: #0d5bf2;
@@ -59,11 +60,30 @@ body {
     &__brand-name {
         margin-left: 5px;
     }
+
+    .hamburger {
+        display: none;
+        z-index: 4;
+        @media (max-width: 768px) {
+            display: block;
+        }
+    }
 }
 
 .nav {
     display: flex;
     align-items: center;
+    @media (max-width: 768px) {
+        display: none;
+        width: 100%;
+        height: 100vh;
+        z-index: 3;
+        flex-direction: column;
+        justify-content: space-evenly;
+        position: absolute;
+        top: 0;
+        background-color: $pageBackground;
+    }
 
     &__element {
         color: #000;
@@ -91,7 +111,7 @@ body {
 
 .section {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -107,6 +127,10 @@ body {
     background-size: contain;
     background-position: 100% 0;
 
+    @media (max-width: 768px) {
+        background-image: none;
+    }
+
     &__center-elements {
         width: 100%;
         display: flex;
@@ -118,6 +142,9 @@ body {
         .hero {
             width: 30%;
             padding: 5px;
+            @media (max-width: 768px) {
+                width: 100%;
+            }
 
             &__text {
                 font-size: 2.5em;
@@ -126,6 +153,14 @@ body {
             &__subtext {
                 font-size: 0.9em;
                 color: $heroSubtextColor;
+            }
+        }
+
+        .cupcakes-image {
+            width: 50%;
+
+            @media (max-width: 768px) {
+                display: none;
             }
         }
     }
@@ -150,7 +185,7 @@ body {
         flex-grow: 2;
         width: 80%;
         display: grid;
-        grid-template-columns: repeat(3, minmax(200px, 1fr));
+        grid-template-columns: repeat(auto-fit, minmax(30%, 1fr));
         gap: 20px;
 
         &--align-top {
@@ -166,7 +201,12 @@ body {
 .catering {
     &__description {
         width: 80%;
-        margin-top: 100px;
+        padding: 10px;
+
+        @media (max-width: 768px) {
+            width: 100%;
+            font-size: 0.8em;
+        }
 
         &__final-statement {
             text-align: center;
@@ -244,6 +284,10 @@ body {
 
     &__product-image {
         width: 128px;
+
+        @media (max-width: 768px) {
+            width: 64px;
+        }
     }
 
     &__title--bold {
@@ -297,12 +341,9 @@ body {
         &__button {
             @include button-style;
             height: 35px;
+            margin: 10px 0;
         }
     }
-}
-
-.cupcakes-image {
-    width: 700px;
 }
 
 .fixed {
