--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: "Comfortaa", cursive;
+  font-family: 'Comfortaa', cursive;
   background-color: #fdfcfc;
 }
 
@@ -158,12 +158,12 @@ body {
 }
 
 .nav {
+  height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-line-pack: stretch;
+      align-content: stretch;
 }
 
 @media (max-width: 768px) {
@@ -186,26 +186,31 @@ body {
 }
 
 .nav__element {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #000;
   text-decoration: none;
-  margin: 0 10px;
+  padding: 10px;
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
 }
 
-.nav__element--button {
-  width: 120px;
-  height: 40px;
-  font-family: "Comfortaa", cursive;
-  font-size: 1em;
-  font-weight: bold;
-  color: #fff;
-  background-color: #0d5bf2;
-  border: none;
-  border-radius: 20px;
-}
-
-.nav__element--button:hover {
+.nav__element:hover {
   cursor: pointer;
-  background-color: rgba(13, 91, 242, 0.8);
+}
+
+.nav__element--active {
+  font-size: 1.25em;
+  font-weight: 700;
+  color: #b5153e;
 }
 
 .section {
@@ -291,10 +296,7 @@ body {
 .home__mouse-icon {
   width: 32px;
   position: absolute;
-  left: 50%;
   top: 92%;
-  -webkit-transform: translate(-50%, -50%);
-          transform: translate(-50%, -50%);
   -webkit-animation: mouse-animation 2s infinite;
           animation: mouse-animation 2s infinite;
 }
@@ -539,7 +541,7 @@ body {
   display: flex;
 }
 
-.lockScroll {
+.lock-scroll {
   overflow-y: hidden;
 }
 
