--- a/style.css
+++ b/style.css
@@ -176,11 +176,12 @@ body {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
     position: absolute;
     top: 0;
+    left: 0;
     background-color: #fdfcfc;
   }
 }
@@ -198,9 +199,13 @@ body {
   color: #000;
   text-decoration: none;
   padding: 10px;
-  -webkit-box-flex: 2;
-      -ms-flex-positive: 2;
-          flex-grow: 2;
+}
+
+@media (max-width: 768px) {
+  .nav__element {
+    font-size: 1.25em;
+    margin: 30px 0;
+  }
 }
 
 .nav__element:hover {
@@ -453,7 +458,7 @@ body {
   font-weight: 700;
 }
 
-.book-order {
+.booking {
   width: 100%;
   height: 100%;
   display: none;
@@ -469,7 +474,7 @@ body {
   background-color: rgba(0, 0, 0, 0.5);
 }
 
-.book-order .form {
+.booking .form {
   width: 80%;
   height: 50%;
   background-color: #fdfcfc;
@@ -491,7 +496,14 @@ body {
   position: relative;
 }
 
-.book-order .form__close-button {
+@media (max-width: 768px) {
+  .booking .form {
+    width: 90%;
+    height: 90%;
+  }
+}
+
+.booking .form__close-button {
   width: 16px;
   height: 16px;
   position: absolute;
@@ -499,11 +511,11 @@ body {
   right: 5px;
 }
 
-.book-order .form__close-button:hover {
+.booking .form__close-button:hover {
   cursor: pointer;
 }
 
-.book-order .form__input {
+.booking .form__input {
   width: 200px;
   height: 28px;
   padding: 5px;
@@ -511,7 +523,7 @@ body {
   border-radius: 14px;
 }
 
-.book-order .form__button {
+.booking .form__button {
   width: 200px;
   height: 50px;
   border: none;
@@ -523,7 +535,7 @@ body {
   margin: 10px 0;
 }
 
-.book-order .form__button:hover {
+.booking .form__button:hover {
   cursor: pointer;
   background-color: rgba(21, 142, 181, 0.8);
 }
