--- a/style.scss
+++ b/style.scss
@@ -80,9 +80,10 @@ body {
         height: 100vh;
         z-index: 3;
         flex-direction: column;
-        justify-content: space-evenly;
+        justify-content: center;
         position: absolute;
         top: 0;
+        left: 0;
         background-color: $pageBackground;
     }
 
@@ -93,7 +94,11 @@ body {
         color: #000;
         text-decoration: none;
         padding: 10px;
-        flex-grow: 2;
+
+        @media (max-width: 768px) {
+            font-size: 1.25em;
+            margin: 30px 0;
+        }
 
         &:hover {
             cursor: pointer;
@@ -293,7 +298,7 @@ body {
     }
 }
 
-.book-order {
+.booking {
     width: 100%;
     height: 100%;
     display: none;
@@ -315,6 +320,11 @@ body {
         justify-content: space-evenly;
         align-items: center;
         position: relative;
+
+        @media (max-width: 768px) {
+            width: 90%;
+            height: 90%;
+        }
 
         &__close-button {
             width: 16px;
